Documentation edits made through Mintlify web editor

--- a/api-reference/api-contribuyentes/consultas-publicas/situacion-tributaria-de-un-contribuyente.mdx
+++ b/api-reference/api-contribuyentes/consultas-publicas/situacion-tributaria-de-un-contribuyente.mdx
@@ -1,4 +1,4 @@
 ---
 title: 'Situación Tributaria de un Contribuyente'
-openapi: 'GET /api/v1/sii/contribuyentes/situacion_tributaria/tercero/:rut'
+openapi: 'GET /api/v1/sii/contribuyentes/situacion_tributaria/tercero/{rut}'
 ---
